@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Tue Jul 24 23:39:36 PDT 2012
-build.number=657
+#Thu Jul 26 21:34:12 PDT 2012
+build.number=670
