@@ -5,12 +5,15 @@ package org.morganm.homespawnplus.integration.worldguard;
 
 import org.bukkit.Location;
 import org.bukkit.entity.Player;
+import org.bukkit.event.HandlerList;
 
 /**
  * @author morganm
  *
  */
 public class RegionExitEvent extends RegionEvent {
+    private static final HandlerList handlers = new HandlerList();
+
     /**
      * 
      * @param regionName the name of the region
@@ -20,5 +23,13 @@ public class RegionExitEvent extends RegionEvent {
      */
     public RegionExitEvent(final String regionName, final String regionWorldName, final Player player, final Location to) {
     	super(regionName, regionWorldName, player, to);
+    }
+
+	@Override
+	public HandlerList getHandlers() {
+        return handlers;
+	}
+    public static HandlerList getHandlerList() {
+        return handlers;
     }
 }
