@@ -17,8 +17,8 @@ public enum EventType {
 	CROSS_WORLD_TELEPORT("crossWorldTeleport"),
 	MULTIVERSE_TELEPORT_CROSSWORLD("multiverseCrossWorldTeleport"),
 	MULTIVERSE_TELEPORT("multiverseTeleport"),
-	ENTER_REGION("enterregion"),
-	EXIT_REGION("exitregion");
+	ENTER_REGION("onregionenter"),
+	EXIT_REGION("onregionexit");
 	
 	private String configOption;
 	EventType(String configOption) {
