@@ -8,12 +8,13 @@ v1.7 -
 * New command system which allows HSP to map commands dynamically at runtime
 * New command system also finally fully enables "disabledCommands" feature so you can completely disable commands you don't want to use
 * Custom event commands (uses new command system)
-
+* Implemented new events "onRegionEnter" and "onRegionExit"
 
 v1.6.2 - 
 * Ticket #118: error when using spawnWorldRandom strategy
 * cleaned up some spurious warning messages related to some missing default config settings
 * added "core.bedHomeOverwritesDefault" flag for determining how bed home vs default home (/sethome) interact (default = true)
+* added fix for possible spurious "location is different than where HSP sent player" messages
 
 v1.6.1 - Jul 8, 2012
 * made strategies no longer case-sensitive in the configuration
